app-service.yml
apiVersion: v1
kind: Service

metadata:
  name: flask-server-clusterip
  
spec:
  type: ClusterIP
  ports:
    - port: 5000
      protocol: TCP
  selector:
    components: flask-server
