ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: myingress
  annotations:
    nginx.ingress.kubernetes.io/add-base-url: "true"

spec:
  ingressClassName: nginx      
  rules:
  - host: minikube-practice
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: flask-server-clusterip
            port: 
              number: 5000
